Add recording and MMS methods - does not work yet

--- a/PanicAlarm/app/src/main/AndroidManifest.xml
+++ b/PanicAlarm/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_MMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_VIDEO" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -36,11 +40,13 @@
 
         <activity
             android:name=".DetermineLocation"
-            android:label="@string/title_activity_determine_location"></activity>
+            android:label="@string/title_activity_determine_location" />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".SendMMS"></activity>
     </application>
 
 </manifest>
